--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.2",
-    "normalize.css": "^7.0.0"
+    "normalize.css": "^7.0.0",
+    "postcss-nested": "^4.1.2"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.3.0",
     "babel-eslint": "^8.0.1",
     "eslint": "^4.8.0",
     "eslint-config-airbnb-base": "^12.0.1",
@@ -22,7 +22,8 @@
     "pre-commit": "^1.2.2",
     "prettier": "^1.7.3",
     "stylelint": "^8.1.1",
-    "stylelint-config-standard": "^17.0.0"
+    "stylelint-config-standard": "^17.0.0",
+    "webpack-dev-server": "^3.3.0"
   },
   "scripts": {
     "lint-staged": "$(yarn bin)/lint-staged"
