--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.2",
+    "actioncable": "^5.2.3",
     "normalize.css": "^7.0.0",
     "postcss-nested": "^4.1.2"
   },
